Update styles to make it more calm for users eyes

--- a/catergories/templates/cats.html
+++ b/catergories/templates/cats.html
@@ -1,7 +1,7 @@
 {% extends 'home.html' %}
 
 {% block cats %}
-<div class="col-sm-2" style="background-color: grey;padding-left: 0;padding-right: 0;">
+<div class="col-sm-2" style="padding-left: 0;padding-right: 0;">
   <div class="list-group" id="list-tab" role="tablist">
     <a class="list-group-item list-group-item-action disabled header-cat">Catergories</a>
     {% for Catergory in Catergories %}
