--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -3,43 +3,37 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container headerAd">
-        <div class="row">
-            <div class="col-sm-12">
+        <div class="row home-row">
+            <div class="col-sm-12 h100"  style="padding:0;">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                   </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="d-block w-100" src="..." alt="First slide">
+                  <div class="carousel-inner h100">
+                    <div class="carousel-item h100 active">
+                      <img class="d-block w-100 h100" src="/media/home/mens-ad.jpg" alt="First slide">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
                       </div>
                     </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="..." alt="Second slide">
+                    <div class="carousel-item h100">
+                      <img class="d-block w-100 h100" src="/media/home/womens-ad.jpg" alt="Second slide">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
                       </div>
                     </div>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="..." alt="Third slide">
+                    <div class="carousel-item h100">
+                      <img class="d-block w-100 h100" src="/media/home/unisex-banner.jpg" alt="Third slide">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>...</h5>
-                        <p>...</p>
                       </div>
                     </div>
                   </div>
                   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <i class="fa fa-chevron-left"></i>
                     <span class="sr-only">Previous</span>
                   </a>
                   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <i class="fa fa-chevron-right"></i>
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
@@ -56,6 +50,20 @@
         {% endblock %}
       </div>
     </div>
+</div>
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">About</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
+</div>
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Contact</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
 </div>
 
 {% endblock %}
