--- a/templates/base.html
+++ b/templates/base.html
@@ -15,36 +15,30 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light p-3 bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light p-3 navbar-fixed">
         <div class="row" style="width: 100% !important">
           <div class="col-sm-3">
-            <a class="navbar-brand" style="color: white !important" href="{% url 'index' %}">LOGO(--HERE--)</a>
+            <a class="navbar-brand" href="{% url 'index' %}">LOGO(--HERE--)</a>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-5">
             <form class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
           </div>
-          <div class="col-sm-2">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <div class="col-sm-4">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="float: right;">
               <span class="navbar-toggler-icon"></span>
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link navText" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                  <a class="nav-link navText" href="#">About</a>
-                </li>
-                 <li class="nav-item">
-                  <a class="nav-link navText" href="#">Contact</a>
+                  <a class="nav-link navText" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link navText dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Catergories
+                    Products
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     {% for Catergory in Catergories %}
@@ -60,6 +54,12 @@
                       {% endfor %}
                     {% endfor %}
                   </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link navText" href="#">About</a>
+                </li>
+                 <li class="nav-item">
+                  <a class="nav-link navText" href="#">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -100,7 +100,7 @@
     </nav>
     
     <!-- Content -->
-    <div>
+    <div style="padding: 80px 0;">
         {% block content %}
         
         {% endblock %}
