--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light p-3 navbar-fixed">
-        <div class="row" style="width: 100% !important">
+        <div class="row nav-row">
           <div class="col-sm-3">
-            <a class="navbar-brand" href="{% url 'index' %}">LOGO(--HERE--)</a>
+            <a class="navbar-brand" href="{% url 'index' %}">STONED ACADEMY</a>
           </div>
           <div class="col-sm-5">
             <form class="form-inline my-2 my-lg-0">
@@ -100,7 +100,7 @@
     </nav>
     
     <!-- Content -->
-    <div style="padding: 80px 0;">
+    <div style="padding: 80px 0 0 0;">
         {% block content %}
         
         {% endblock %}
