--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -3,7 +3,10 @@
 <h1 style="text-align: center;">Account</h1>
 <div class="container">
     <div class="row h100">
-        <div class="col ac-options" >
+        <div class="col-md-1">
+            
+        </div>
+        <div class="col-sm-4 col-md-3 ac-options" >
             <a href="/account/{{user}}/settings/">
                 <div class="ac-box">
                     Login & Security
@@ -12,7 +15,7 @@
                 </div>
             </a>
         </div>
-        <div class="col ac-options" >
+        <div class="col-sm-4 col-md-3 ac-options" >
             <a href="/account/{{user}}/orders/">
                 <div class="ac-box">
                     Orders
@@ -21,7 +24,7 @@
                 </div>
             </a>
         </div>
-        <div class="col ac-options" >
+        <div class="col-sm-4 col-md-3 ac-options" >
             <a href="/account/{{user}}/reviews/">
                 <div class="ac-box">
                     Reviews
@@ -32,7 +35,10 @@
         </div>
     </div>
     <div class="row h100">
-        <div class="col ac-options" >
+        <div class="col-md-1">
+            
+        </div>
+        <div class="col-sm-4 col-md-3 ac-options" >
             <a href="/account/{{user}}/payment/">
                 <div class="ac-box">
                     Payment Options
@@ -41,7 +47,7 @@
                 </div>
             </a>
         </div>
-        <div class="col ac-options" >
+        <div class="col-sm-4 col-md-3 ac-options" >
             <a href="/account/{{user}}/address/">
                 <div class="ac-box">
                     Address & Delivery
@@ -50,7 +56,7 @@
                 </div>
             </a>
         </div>
-        <div class="col ac-options" >
+        <div class="col-sm-4 col-md-3 ac-options" >
             <a href="/account/{{user}}/support/">
                 <div class="ac-box">
                     Support
