--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -14,33 +14,49 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container checkout-container">
     <div class="row">
         <div class="col-sm">
-            <div class="row">
-                <h3 style="text-align: center; width: 50% !important"> Total</h3>
-                <h3 style="text-align: center; width: 50% !important"><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>£ {{ total }}</h3>
+            <div class="row total-row">
+                <div class="col-12" style="text-align: center;">
+                    <i class="fa fa-shopping-cart checkout-Section" aria-hidden="true"></i>
+                    <i class="fa fa-ellipsis-h checkout-Section"></i>
+                    <i class="fa fa-tv checkout-Section" aria-hidden="true"></i>
+                    <i class="fa fa-ellipsis-h checkout-Section"></i>
+                    <i class="fa fa-check checkout-Section"></i>
+                    <i class="fa fa-ellipsis-h checkout-Section"></i>
+                    <i class="fa fa-truck checkout-Section"></i>
+                </div>
+                <div class="col-12">
+                    <h1 style="text-align: center;"> Total</h1>
+                </div>
+                <div class="col-12">
+                    <h3 style="text-align: center;"><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>£ {{ total }}</h3>
+                </div>
             </div>
-            
-            
-            <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-                <legend>Payment Details</legend>
-                <div id="credit-card-errors" style="display:none">
-                    <div class="aler-message block-messag eerror" id="stripe-error-message"></div>
+            <div class="row details-row">
+                <div class="col-12">
+                    <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+                        <legend style="text-align: center;" >Payment Details</legend>
+                        <div id="credit-card-errors" style="display:none">
+                            <div class="aler-message block-messag eerror" id="stripe-error-message"></div>
+                        </div>
+                        
+                        <div class="form-group details-form-group">
+                            {{ order_form|as_bootstrap }}
+                        </div>
+                        <div class="form-group details-form-group">
+                            {{ payment_form|as_bootstrap }}
+                        </div>
+                        
+                        {% csrf_token %}
+                        <div class="form-group details-form-group">
+                            <i class="fa fa-check-circle"></i>
+                            <input type="submit" class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+                        </div>
+                    </form>
                 </div>
-                
-                <div class="form-group">
-                    {{ order_form|as_bootstrap }}
-                </div>
-                <div class="form-group">
-                    {{ payment_form|as_bootstrap }}
-                </div>
-                
-                {% csrf_token %}
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
