add amazon s3 url link for home page

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -61,7 +61,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="{{ MEDIA_URL }}/images/Me.jpg" alt="Avatar" class="flip-img">
+              <img src="{{ MEDIA_URL }}images/Me.jpg" alt="Avatar" class="flip-img">
             </div>
             <div class="flip-card-back">
               <h1>Jason Bishop</h1> 
@@ -75,7 +75,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="{{ MEDIA_URL }}/images/watson.jpg" alt="Avatar" class="flip-img">
+              <img src="{{ MEDIA_URL }}images/watson.jpg" alt="Avatar" class="flip-img">
             </div>
             <div class="flip-card-back">
               <h1>James Watson</h1> 
