add amazon s3 url link for home page

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -8,17 +8,17 @@
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner h100  carousel-clip">
                     <div class="carousel-item h100 active">
-                      <img class="d-block w-100 h100" src="/media/home/mens-ad.jpg" alt="First slide">
+                      <img class="d-block w-100 h100" src="{{ MEDIA_URL }}home/mens-ad.jpg" alt="First slide">
                       <div class="carousel-caption d-none d-md-block">
                       </div>
                     </div>
                     <div class="carousel-item h100">
-                      <img class="d-block w-100 h100" src="/media/home/womens-ad.jpg" alt="Second slide">
+                      <img class="d-block w-100 h100" src="{{ MEDIA_URL }}home/womens-ad.jpg" alt="Second slide">
                       <div class="carousel-caption d-none d-md-block">
                       </div>
                     </div>
                     <div class="carousel-item h100">
-                      <img class="d-block w-100 h100" src="/media/home/unisex-banner.jpg" alt="Third slide">
+                      <img class="d-block w-100 h100" src="{{ MEDIA_URL }}home/unisex-banner.jpg" alt="Third slide">
                       <div class="carousel-caption d-none d-md-block">
                       </div>
                     </div>
